--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,8 +13,10 @@
     "framer-motion": "^11.5.6",
     "lucide-react": "^0.445.0",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.2",
     "zustand": "^5.0.0-rc.2"
   },
