--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "mailtrap": "^3.4.0",
     "mongoose": "^8.6.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.15"
+    "nodemailer": "^6.9.15",
+    "prop-types": "^15.8.1",
+    "react-stripe-checkout": "^2.6.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
